--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,9 @@
 <footer class="site-footer">
-
-  <div class="wrapper">
-
+  <div class="mx-auto max-w-prose my-12">
     <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-3">
+      <div class="footer-col footer-col-3">
         <p class="text">{{ .Site.Params.description | safeHTML }}</p>
       </div>
     </div>
-
   </div>
-
 </footer>
