--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-  <div class="mx-auto max-w-prose my-12">
+  <div class="mx-auto max-w-prose my-12 px-2">
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-3">
         <p class="text">{{ .Site.Params.description | safeHTML }}</p>
