--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="post h-entry max-w-prose mx-auto prose dark:prose-invert">
+<div class="post h-entry max-w-prose mx-auto prose dark:prose-invert px-2">
 
   <header class="post-header">
   {{ if .Title }}
