fix list border

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
   {{ range $paginator.Pages  }}
 
   <li class="h-entry">
-    <div class="prose dark:prose-invert border-b border-flexoki-dark-ye pb-12 mb-12 px-2">
+    <div class="prose dark:prose-invert border-b border-flexoki-dark-ye pb-12 mb-12 mx-2">
     {{ if .Title }}
       <h1 class="p-name"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
     {{ end }}
