--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,12 @@
 <header class="my-12 max-w-prose mx-auto text-center text-lg px-2">
   <a
     href="/"
-    class="text-flexoki-light-tx dark:text-flexoki-blue-50 dark:hover:text-white underline font-bold font-serif decoration-flexoki-yellow-200 dark:hover:decoration-flexoki-100 hover:decoration-flexoki-yellow-300 transition-colors decoration-2 underline-offset-4"
+    class="text-flexoki-light-tx inline-block dark:text-flexoki-blue-50 dark:hover:text-white underline font-bold font-serif decoration-flexoki-yellow-200 dark:hover:decoration-flexoki-100 hover:decoration-flexoki-yellow-300 transition-colors decoration-2 underline-offset-4"
   >
-    {{ .Site.Title }}</a
-  >
+    {{ .Site.Title }}
+  </a>
+
+  <div class="dark:text-flexoki-yellow-300 text-xs mt-2 uppercase">
+    Microblog
+  </div>
 </header>
