--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -26,4 +26,8 @@
 <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
 {{ end }}
 
+{{ if templates.Exists "partials/microhook-after-comments.html" }}
+{{ partial "microhook-after-comments.html" . }}
+{{ end }}
+
 {{ end }}
