--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,17 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   {{ partial "head.html" . }}
+
 
   <body
     class="bg-flexoki-paper font-serif dark:bg-flexoki-blue-950 dark:text-flexoki-dark-tx"
   >
     {{ partial "header.html" . }}
 
+
     <main class="page-content">{{ block "main" . }}{{ end }}</main>
 
-    {{ partial "footer.html" . }} {{ partial "custom_footer.html" . }} {{ range
-    .Site.Params.plugins_js }}
-    <script src="{{ . }}"></script>
+    {{ partial "footer.html" . }}
+    {{ partial "custom_footer.html" . }}
+    {{ range
+      .Site.Params.plugins_js
+    }}
+      <script src="{{ . }}"></script>
     {{ end }}
   </body>
 </html>
