--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,22 +1,29 @@
 {{ define "main" }}
-<div class="home h-feed">
+  <div class="home h-feed">
+    <ul class="post-list max-w-prose mx-auto">
+      {{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
+      {{ range $paginator.Pages }}
+        <li class="h-entry">
+          {{ if .Title }}
+            <h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+          {{ end }}
 
-  <ul class="post-list max-w-prose mx-auto">
-  {{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "post") (index .Site.Params "archive-paginate" | default 25) }}
-  {{ range $paginator.Pages  }}
-      <li class="h-entry">
-    {{ if .Title }}
-      <h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-    {{ end }}
 
-        <a href="{{ .Permalink }}" class="u-url"><span class="post-meta"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time></span></a>
+          <a href="{{ .Permalink }}" class="u-url"
+            ><span class="post-meta"
+              ><time
+                class="dt-published"
+                datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}"
+                >{{ .Date.Format "Jan 2, 2006" }}</time
+              ></span
+            ></a
+          >
 
-        <div class="e-content prose dark:prose-invert mx-auto">
-           {{ .Content }}
-        </div>
-      </li>
-    {{ end }}
-  </ul>
-
-</div>
+          <div class="e-content prose dark:prose-invert mx-auto">
+            {{ .Content }}
+          </div>
+        </li>
+      {{ end }}
+    </ul>
+  </div>
 {{ end }}
