back to website

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,10 @@
+<div
+  class="text-sm dark:bg-flexoki-blue-900 bg-flexoki-yellow-100 text-right p-1 px-4"
+>
+  <a href="https://www.jamiemchale.com"
+    ><span class="underline">jamiemchale.com</span> ⤴︎</a
+  >
+</div>
 <header class="my-12 max-w-prose mx-auto text-center text-lg px-2">
   <a
     href="/"
