--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,22 @@
 @config "./tailwind.config.js";
 
 @import "tailwindcss";
+
+/* Responsive embed helpers for oEmbed iframes (YouTube, etc.) */
+@layer components {
+  .embed {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+  .embed-16by9 {
+    aspect-ratio: 16 / 9;
+  }
+  .embed iframe {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+}
